@@ -24,6 +24,9 @@ Use the specified file as configuration file (default is ~/.gnubiffrc)
 .B \-n, \-\-noconfigure
 Skip the configure process
 .TP
+.B \-\-nogui
+Start gnubiff without GUI
+.TP
 .B \-?, \-\-help
 Show summary of options
 .TP
