@@ -79,7 +79,7 @@ public:
 	// ========================================================================
 	//  base
 	// ========================================================================
-	Biff (guint ui_mode = GTK_MODE, std::string filename = "");
+	Biff (guint ui_mode = MODE_GTK, std::string filename = "");
 	~Biff (void);
 
 	// ========================================================================
